# vectormatrix

./: .editorconfig  .gitignore  CMakeLists.txt  Doxyfile  README.md  mat.h  testmat.cpp  testmatvec.cpp  testvec.cpp  vec.h
src/: mat.h  vec.h
test/: mat_test.cpp  vec_mat_test.cpp  vec_test.cpp
